# AntWorks-RL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  rough-copy.md
.claude/commands/: next-lesson.md  update-docs.md
.github/workflows/: ci.yaml
learning/: GLOSSARY.md  MISSION.md  RESOURCES.md  ROADMAP.md
learning/explainers/: lesson-0.1-modern-python-scaffolding.html  lesson-0.2-lint-format-type-gates.html  lesson-0.3-config-spine.html  lesson-0.4-test-ci-harness.html  lesson-0.5-logging.html  lesson-0.6-docs-that-lead-the-code.html  lesson-1.1-grid-and-entities.html  lesson-1.1a-python-dataclasses.html  lesson-1.1b-hypothesis.html
learning/learning-records/: 0001-prior-knowledge.md  0002-locked-design-decisions.md  0003-docs-track-reality.md  0004-hydra-relative-config-path.md  0005-ty-blocking-ci.md  0006-hydra-owns-the-root-logger.md  0007-flat-test-layout.md
src/antworks_rl/: __init__.py  constants.py  logging.py  rng.py  world.py
src/conf/: config.yaml
src/conf/logging/: debug.yaml  default.yaml
src/conf/world/: default.yaml  test.yaml
tests/: test_config.py  test_logging.py  test_rng.py
