[project]
name = "antworks-rl"
version = "0.1.0"
description = "Learned multi-agent ant-colony simulation"
readme = "README.md"
authors = [
    { name = 'mwaqas', email = "waqasisme@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[project.scripts]
antworks-rl = "antworks_rl:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pytest>=9.1.1",
]
