[project]
name = "antworks-rl"
version = "0.1.0"
description = "Learned multi-agent ant-colony simulation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = 'mwaqas', email = "waqasisme@gmail.com" }
]
dependencies = [
    "hydra-core>=1.3.4",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
]

[project.scripts]
antworks-rl = "antworks_rl:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.57",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # pyflakes, pycodestyle, isort, pyupgrade, bugbear
